Clang not working continue with gcc

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         NAME: Loganysl
       with:
         arch: arm64
-        compiler: clang/12
+        compiler: gcc/12
         defconfig: ysl-perf_defconfig
         image: Image.gz-dtb
 
