Mem kernel module

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
         name: module
         path: |
           ${{ steps.build.outputs.outfile }}
-          ./anrwt.ko
+          ./out/drivers/memkernel/memkernel.ko
